# autoresearch

./: .gitignore  agent_loop.py  prepare.py  program.md  pyproject.toml  run_auto.ps1  run_pipeline.ps1  temp_prompt.txt
